# tp75521c

./: .gitignore  .travis.yml  Dockerfile  README.md
AppServer/: .gitignore  CMakeLists.txt  coverage.sh  install.sh
AppServer/functionalTests/: AccountTestCases.py  MatchTestCases.py  restTester.py  testCases.py
AppServer/lib/casablanca/cpprest/: astreambuf.h  asyncrt_utils.h  base_uri.h  containerstream.h  filestream.h  http_client.h  http_headers.h  http_listener.h  http_msg.h  interopstream.h  json.h  oauth1.h  oauth2.h  producerconsumerstream.h  rawptrstream.h  streams.h  uri.h  uri_builder.h  ws_client.h  ws_msg.h
AppServer/lib/casablanca/cpprest/details/: cpprest_compat.h  fileio.h  http_client_impl.h  http_helpers.h  http_server_asio.h  http_server_httpsys.h
AppServer/lib/casablanca/pplx/: pplx.h  pplxcancellation_token.h  pplxlinux.h  pplxtasks.h  pplxwin.h
AppServer/lib/modules/: FindJsonCpp.cmake  FindJsonCpp.cmake~  FindRocksDB.cmake
AppServer/lib/mongoose/: Controller.cpp  JsonController.cpp  JsonController.h  JsonResponse.cpp  JsonResponse.h  Mutex.cpp  Request.cpp  Request.h  RequestHandler.h  Response.cpp  Response.h  Server.h  Session.cpp  Session.h  StreamResponse.cpp  StreamResponse.h  UploadFile.cpp  UploadFile.h  Utils.cpp  Utils.h  WebController.cpp  WebController.h  WebSocket.cpp  WebSocket.h  WebSockets.cpp  WebSockets.h  mongoose.c
AppServer/lib/rocksDB/: librocksdb.a.REMOVED.git-id
AppServer/src/: main.cpp
AppServer/src/controllers/: AccountController.cpp  AccountController.h  BaseController.cpp  BaseController.h  CMakeLists.txt
AppServer/src/controllers/accounts/: AccountController.cpp  AccountController.h
AppServer/src/controllers/matchs/: MatchsController.cpp  MatchsController.h
AppServer/src/db/: CMakeLists.txt  Database.cpp  Database.h
AppServer/src/domain/: Entity.cpp  Entity.h  User.cpp  User.h
AppServer/src/errors/: BadJsonError.h  BadParamError.h  EmptyParamError.h  Error.h  ResourceNotFound.h  ServerError.h  UnauthorizedError.h
AppServer/src/json/: CMakeLists.txt  Makefile
AppServer/src/jsoncpp/: .gitignore
AppServer/src/model/: AccessToken.cpp  AccessToken.h  Account.cpp  Account.h  CMakeLists.txt  Chat.cpp  Chat.h  Entity.cpp  Entity.h  MatchCount.cpp  MatchCount.h  Token.cpp  Token.h
AppServer/src/mongoose/: JsonResponse.cpp  JsonResponse.h
AppServer/src/utils/: CMakeLists.txt  ConnectionUtils.cpp  ConnectionUtils.h  Logger.cpp  Logger.h  utils.cpp  utils.h
AppServer/test/: CMakeLists.txt  main.cpp
AppServer/test/controllers/: AccountControllerTest.cpp  AccountControllerTest.h  BaseControllerTest.cpp  BaseControllerTest.h  BaseTestController.cpp  BaseTestController.h  MatchControllerTest.cpp  MatchControllerTest.h
AppServer/test/model/: AccessTokenTest.cpp  AccessTokenTest.h  AccountTest.cpp  AccountTest.h  ChatTest.cpp  ChatTest.h  EntityTest.cpp  MatchCountTest.cpp  MatchCountTest.h  MatchCountTests.h
